--- a/sample.html
+++ b/sample.html
@@ -11,7 +11,7 @@
         </tr>
     </table>
 
-    <button onclick="sampleAction(1,2,3)">
+    <button onclick="sampleAction(1,' 2 ',3)">
         Sample
     </button>
 
